# SpiralMind-Nexus

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  demo_viral.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
GOKAI_sys/: GOKAI_Calculator.py
docs/: INSTALACJA.md
spiral/: __init__.py  api.py  cli.py
spiral/config/: __init__.py  loader.py
spiral/core/: __init__.py  gokai_core.py  quantum_core.py
spiral/memory/: __init__.py  persistence.py
spiral/pipeline/: __init__.py  double_pipeline.py  synergy_orchestrator.py
spiral/utils/: __init__.py  logging_config.py
tests/: conftest.py  test_quantum_core.py  test_synergy.py
